--- a/PotrosPedidos_Presentacion/pom.xml
+++ b/PotrosPedidos_Presentacion/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>PotrosPedidos_Presentacion</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+     
     <!--    <build>
         <plugins>
             <plugin>
@@ -31,7 +32,7 @@
             </plugin>
         </plugins>
     </build>-->
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -62,13 +63,13 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib</classpathPrefix>
-                            <!--<mainClass>com.test.entryClassOfJarHavingMainMethod</mainClass>-->
+                            <mainClass>com.test.entryClassOfJarHavingMainMethod</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 <!--    <repositories>
         <repository>
             <id>unknown-jars-temp-repo</id>
@@ -116,10 +117,36 @@
             <scope>system</scope>
             <systemPath>C:\Users\rover\Documents\GitHub\windows11-jscrollbar\TimingFramework-0.55.jar</systemPath>
         </dependency>-->
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.33</version>
-        </dependency>
+        
     </dependencies>
+       <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+                <archive>
+                    <manifest>
+                        <mainClass>org.itson.disenosw.main.Principal</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
+
+
 </project>
